[package]
name = "noop-attr"
version = "0.1.0"
authors = ["Justin Starry"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jstarry/noop-attr"
homepage = "https://github.com/jstarry/noop-attr"
description = "A proc macro attribute that does nothing"
edition = "2018"

[lib]
proc-macro = true
